--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>hello shivani</h1>
     <p>grfdgfdgf</p>
     <p>This is the campus of MMF infotech</p>
     <img src="images/child.jpg" alt="">
